public class Paper extends Shape {

    @Override
    public int winsWith() {
        return Shapes.ROCK.ordinal();
        
    }
    
}
