public class Scissor extends Shape {

    @Override
    public int winsWith() {
        return Shapes.PAPER.ordinal();
        
    }
    
}
